--- a/index.html
+++ b/index.html
@@ -166,17 +166,17 @@
                     imgs[i].setAttribute("src", "images/box/over" + obj_id + "_min.png");
                 } else if (i % 6 === 3) {
                     if (obj_id === 1) {
-                        imgs[i].style.setProperty("background-color", "#F3BF46", "important");
+                        imgs[i].setAttribute("style", "background-color: #F3BF46 !important");
                     } else if (obj_id === 2) {
-                        imgs[i].style.setProperty("background-color", "#EDC187", "important");
+                        imgs[i].setAttribute("style", "background-color: #EDC187 !important");
                     } else if (obj_id === 3) {
-                        imgs[i].style.setProperty("background-color", "#F9DF9F", "important");
+                        imgs[i].setAttribute("style", "background-color: #F9DF9F !important");
                     } else if (obj_id === 4) {
-                        imgs[i].style.setProperty("background-color", "#D28F4F", "important");
+                        imgs[i].setAttribute("style", "background-color: #D28F4F !important");
                     } else if (obj_id === 5) {
-                        imgs[i].style.setProperty("background-color", "#CA4420", "important");
+                        imgs[i].setAttribute("style", "background-color: #CA4420 !important");
                     } else if (obj_id === 6) {
-                        imgs[i].style.setProperty("background-color", "#EBE5D3", "important");
+                        imgs[i].setAttribute("style", "background-color: #EBE5D3 !important");
                     }
                 } else if (i % 6 === 4) {
                     imgs[i].setAttribute("src", "images/box/right" + obj_id + "_min.png");
