添加包装展示

--- a/index.html
+++ b/index.html
@@ -171,20 +171,20 @@
                         bc4.style.setProperty('background-color', '#F3BF46', 'important');
                         bc7.style.setProperty('background-color', '#F3BF46', 'important');
                     } else if (obj_id === 2) {
-                        bc4.style.setProperty('background-color', '#F3BF46', 'important');
-                        bc7.style.setProperty('background-color', '#F3BF46', 'important');
+                        bc4.style.setProperty('background-color', '#EDC187', 'important');
+                        bc7.style.setProperty('background-color', '#EDC187', 'important');
                     } else if (obj_id === 3) {
-                        bc4.style.setProperty('background-color', '#F3BF46', 'important');
-                        bc7.style.setProperty('background-color', '#F3BF46', 'important');
+                        bc4.style.setProperty('background-color', '#F9DF9F', 'important');
+                        bc7.style.setProperty('background-color', '#F9DF9F', 'important');
                     } else if (obj_id === 4) {
-                        bc4.style.setProperty('background-color', '#F3BF46', 'important');
-                        bc7.style.setProperty('background-color', '#F3BF46', 'important');
+                        bc4.style.setProperty('background-color', '#D28F4F', 'important');
+                        bc7.style.setProperty('background-color', '#D28F4F', 'important');
                     } else if (obj_id === 5) {
-                        bc4.style.setProperty('background-color', '#F3BF46', 'important');
-                        bc7.style.setProperty('background-color', '#F3BF46', 'important');
+                        bc4.style.setProperty('background-color', '#CA4420', 'important');
+                        bc7.style.setProperty('background-color', '#CA4420', 'important');
                     } else if (obj_id === 6) {
-                        bc4.style.setProperty('background-color', '#F3BF46', 'important');
-                        bc7.style.setProperty('background-color', '#F3BF46', 'important');
+                        bc4.style.setProperty('background-color', '#EBE5D3', 'important');
+                        bc7.style.setProperty('background-color', '#EBE5D3', 'important');
                     }
                 } else if (i % 6 === 4) {
                     imgs[i].setAttribute("src", "images/box/right" + obj_id + "_min.png");
