添加包装展示

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         // }
     </script>
     <!-- 第一页 -->
-    <section id="slide_sec1" onclick="box_click()">
+    <section id="slide_sec1" ondblclick="box_click()">
         <div id="bc1"><img src="images/box/front1_min.png" alt="前" class="tem"/></div>
         <div id="bc2"><img src="images/box/back1_min.png" alt="后" class="tem"/></div>
         <div id="bc3"><img src="images/box/over1_min.png" alt="上" class="tem"/></div>
