--- a/index.html
+++ b/index.html
@@ -228,23 +228,42 @@
         // }
     </script>
     <!-- 第一页 -->
-    <section id="slide_sec1" ondblclick="box_click()">
-        <div id="bc1"><img src="images/box/front1_min.png" alt="前" class="tem"/></div>
-        <div id="bc2"><img src="images/box/back1_min.png" alt="后" class="tem"/></div>
-        <div id="bc3"><img src="images/box/over1_min.png" alt="上" class="tem"/></div>
+    <section id="slide_sec1">
+        <div id="bc1"><img src="images/box/front1_min.png" alt="前" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
+        <div id="bc2"><img src="images/box/back1_min.png" alt="后" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
+        <div id="bc3"><img src="images/box/over1_min.png" alt="上" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
         <div id="bc4" class="tem"></div>
-        <div id="bc5"><img src="images/box/right1_min.png" alt="右" class="tem"/></div>
-        <div id="bc6"><img src="images/box/left1_min.png" alt="左" class="tem"/></div>
-        <div id="bc7"><img src="images/box/front1_min.png" alt="" class="tem"/></div>
-        <div id="bc8"><img src="images/box/back1_min.png" alt="" class="tem"/></div>
-        <div id="bc9"><img src="images/box/over1_min.png" alt="" class="tem"/></div>
+        <div id="bc5"><img src="images/box/right1_min.png" alt="右" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
+        <div id="bc6"><img src="images/box/left1_min.png" alt="左" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
+        <div id="bc7"><img src="images/box/front1_min.png" alt="" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
+        <div id="bc8"><img src="images/box/back1_min.png" alt="" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
+        <div id="bc9"><img src="images/box/over1_min.png" alt="" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
         <div id="bc10" class="tem"></div>
-        <div id="bc11"><img src="images/box/right1_min.png" alt="" class="tem"/></div>
-        <div id="bc12"><img src="images/box/left1_min.png" alt="" class="tem"/></div>
+        <div id="bc11"><img src="images/box/right1_min.png" alt="" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
+        <div id="bc12"><img src="images/box/left1_min.png" alt="" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
     </section>
     <!-- 点击事件 -->
     <script>
+        let timer = null
         function box_click() {
+            clearTimeout(timer)
+            let curr_obj = window.event.currentTarget;
+            timer = setTimeout(function () {
+                let curr_img = curr_obj.src;
+                let bc1 = document.getElementById("bc1");
+                let curr_bg = document.getElementById("slide-sec").style.backgroundImage;
+                let details = document.getElementById("details");
+                let details_img = document.getElementById("details-img");
+                if (bc1.style.transform === "translateZ(171px)") {
+                    details_img.setAttribute("src", curr_img);
+                    details.style.setProperty("background-image", curr_bg, "important");
+                    details.style.setProperty('display', 'block', 'important');
+                }
+            }, 500);
+        }
+
+        function box_dbclick() {
+            clearTimeout(timer);
             let bc1 = document.getElementById("bc1");
             let bc2 = document.getElementById("bc2");
             let bc3 = document.getElementById("bc3");
@@ -268,7 +287,20 @@
             }
         }
     </script>
+</div>
 
+<div class="details" id="details">
+    <div class="back-btn">
+        <a href="javascript:void(0)" id="details-back-btn" onclick="detailsBackClick()"><img src="images/back-btn.png"></a>
+    </div>
+    <img src="images/box/front1.png" alt="" id="details-img">
+
+    <script>
+        function detailsBackClick() {
+            let obj = document.getElementById("details");
+            obj.style.setProperty('display', 'none', 'important');
+        }
+    </script>
 </div>
 
 <div class="container">
