--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@
             let imgs = document.querySelectorAll(".tem");
             let bc4 = document.getElementById("bc4");
             let bc10 = document.getElementById("bc10");
-            console.log(imgs);
             for (let i = 0; i < imgs.length; i++) {
                 if (i % 6 === 0) {
                     imgs[i].setAttribute("src", "images/box/front" + obj_id + "_min.png");
@@ -193,6 +192,13 @@
                     imgs[i].setAttribute("src", "images/box/left" + obj_id + "_min.png");
                 }
             }
+
+            let innerw = window.innerWidth;
+            let innerh = window.innerHeight;
+            let top = -(Math.ceil(innerh / 2) - 40);
+            let back_btn = document.getElementById("back-btn").parentNode;
+            back_btn.style.setProperty('top', top + 'px', 'important');
+
             slide_sec1.style.setProperty("background-image", "url('./images/box/bg" + obj_id + "_min.png')", "important")
             slide_sec1.style.setProperty('visibility', 'visible', 'important');
         }
@@ -229,22 +235,33 @@
     </script>
     <!-- 第一页 -->
     <section id="slide_sec1">
-        <div id="bc1"><img src="images/box/front1_min.png" alt="前" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
-        <div id="bc2"><img src="images/box/back1_min.png" alt="后" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
-        <div id="bc3"><img src="images/box/over1_min.png" alt="上" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
+        <div id="bc1"><img src="images/box/front1_min.png" alt="前" class="tem" ondblclick="box_dbclick()"
+                           onclick="box_click()"/></div>
+        <div id="bc2"><img src="images/box/back1_min.png" alt="后" class="tem" ondblclick="box_dbclick()"
+                           onclick="box_click()"/></div>
+        <div id="bc3"><img src="images/box/over1_min.png" alt="上" class="tem" ondblclick="box_dbclick()"
+                           onclick="box_click()"/></div>
         <div id="bc4" class="tem"></div>
-        <div id="bc5"><img src="images/box/right1_min.png" alt="右" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
-        <div id="bc6"><img src="images/box/left1_min.png" alt="左" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
-        <div id="bc7"><img src="images/box/front1_min.png" alt="" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
-        <div id="bc8"><img src="images/box/back1_min.png" alt="" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
-        <div id="bc9"><img src="images/box/over1_min.png" alt="" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
+        <div id="bc5"><img src="images/box/right1_min.png" alt="右" class="tem" ondblclick="box_dbclick()"
+                           onclick="box_click()"/></div>
+        <div id="bc6"><img src="images/box/left1_min.png" alt="左" class="tem" ondblclick="box_dbclick()"
+                           onclick="box_click()"/></div>
+        <div id="bc7"><img src="images/box/front1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
+                           onclick="box_click()"/></div>
+        <div id="bc8"><img src="images/box/back1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
+                           onclick="box_click()"/></div>
+        <div id="bc9"><img src="images/box/over1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
+                           onclick="box_click()"/></div>
         <div id="bc10" class="tem"></div>
-        <div id="bc11"><img src="images/box/right1_min.png" alt="" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
-        <div id="bc12"><img src="images/box/left1_min.png" alt="" class="tem" ondblclick="box_dbclick()" onclick="box_click()"/></div>
+        <div id="bc11"><img src="images/box/right1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
+                            onclick="box_click()"/></div>
+        <div id="bc12"><img src="images/box/left1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
+                            onclick="box_click()"/></div>
     </section>
     <!-- 点击事件 -->
     <script>
         let timer = null
+
         function box_click() {
             clearTimeout(timer)
             let curr_obj = window.event.currentTarget;
