添加包装展示

--- a/index.html
+++ b/index.html
@@ -193,11 +193,10 @@
                 }
             }
 
-            let innerw = window.innerWidth;
-            let innerh = window.innerHeight;
-            let top = -(Math.ceil(innerh / 2) - 40);
+            let offw = window.innerWidth;
+            let left = (Math.ceil(offw / 2) - 190);
             let back_btn = document.getElementById("back-btn").parentNode;
-            back_btn.style.setProperty('top', top + 'px', 'important');
+            back_btn.style.setProperty('left', left + 'px', 'important');
 
             slide_sec1.style.setProperty("background-image", "url('./images/box/bg" + obj_id + "_min.png')", "important")
             slide_sec1.style.setProperty('visibility', 'visible', 'important');
