添加包装展示

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 }
             }
 
-            let offw = window.innerWidth;
+            let offw = document.body.offsetWidth;
             let left = (Math.ceil(offw / 2) - 190);
             let back_btn = document.getElementById("back-btn").parentNode;
             back_btn.style.setProperty('left', left + 'px', 'important');
