--- a/index.html
+++ b/index.html
@@ -155,169 +155,126 @@
             let obj = window.event.currentTarget;
             let obj_id_str = obj.id;
             let obj_id = parseInt(obj_id_str.substring(1));
-            let slide_sec1 = document.getElementById("slide-sec");
-            let imgs = document.querySelectorAll(".tem");
-            let bc4 = document.getElementById("bc4");
-            let bc10 = document.getElementById("bc10");
-            for (let i = 0; i < imgs.length; i++) {
-                if (i % 6 === 0) {
-                    imgs[i].setAttribute("src", "images/box/front" + obj_id + "_min.png");
-                } else if (i % 6 === 1) {
-                    imgs[i].setAttribute("src", "images/box/back" + obj_id + "_min.png");
-                } else if (i % 6 === 2) {
-                    imgs[i].setAttribute("src", "images/box/over" + obj_id + "_min.png");
-                } else if (i % 6 === 3) {
-                    if (obj_id === 1) {
-                        bc4.style.setProperty('background-color', '#F3BF46', 'important');
-                        bc10.style.setProperty('background-color', '#F3BF46', 'important');
-                    } else if (obj_id === 2) {
-                        bc4.style.setProperty('background-color', '#EDC187', 'important');
-                        bc10.style.setProperty('background-color', '#EDC187', 'important');
-                    } else if (obj_id === 3) {
-                        bc4.style.setProperty('background-color', '#F9DF9F', 'important');
-                        bc10.style.setProperty('background-color', '#F9DF9F', 'important');
-                    } else if (obj_id === 4) {
-                        bc4.style.setProperty('background-color', '#D28F4F', 'important');
-                        bc10.style.setProperty('background-color', '#D28F4F', 'important');
-                    } else if (obj_id === 5) {
-                        bc4.style.setProperty('background-color', '#CA4420', 'important');
-                        bc10.style.setProperty('background-color', '#CA4420', 'important');
-                    } else if (obj_id === 6) {
-                        bc4.style.setProperty('background-color', '#EBE5D3', 'important');
-                        bc10.style.setProperty('background-color', '#EBE5D3', 'important');
-                    }
-                } else if (i % 6 === 4) {
-                    imgs[i].setAttribute("src", "images/box/right" + obj_id + "_min.png");
-                } else if (i % 6 === 5) {
-                    imgs[i].setAttribute("src", "images/box/left" + obj_id + "_min.png");
-                }
-            }
-
-            let offw = document.body.offsetWidth;
-            let left = (Math.ceil(offw / 2) - 190);
-            let back_btn = document.getElementById("back-btn").parentNode;
-            back_btn.style.setProperty('left', left + 'px', 'important');
-
-            slide_sec1.style.setProperty("background-image", "url('./images/box/bg" + obj_id + "_min.png')", "important")
-            slide_sec1.style.setProperty('visibility', 'visible', 'important');
+            window.location.href = "3dbox.html" + "?id=" + obj_id;
+            console.log("id=", obj_id);
         }
     </script>
 </div>
 
 <!-- 轮播卡片 -->
-<div id="slide-sec">
-    <!-- 后退按钮 -->
-    <div class="back-btn">
-        <a href="javascript:void(0)" id="back-btn" onclick="backClick()"><img src="images/back-btn.png" alt=""></a>
-    </div>
-    <!--    &lt;!&ndash; 前进按钮 &ndash;&gt;-->
-    <!--    <div class="front-btn">-->
-    <!--        <a href="javascript:void(0)" id="front-btn"><img src="images/front-btn.png"></a>-->
-    <!--    </div>-->
+<!--<div id="slide-sec">-->
+<!--    &lt;!&ndash; 后退按钮 &ndash;&gt;-->
+<!--    <div class="back-btn">-->
+<!--        <a href="javascript:void(0)" id="back-btn" onclick="backClick()"><img src="images/back-btn.png" alt=""></a>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;    &lt;!&ndash; 前进按钮 &ndash;&gt;&ndash;&gt;-->
+<!--    &lt;!&ndash;    <div class="front-btn">&ndash;&gt;-->
+<!--    &lt;!&ndash;        <a href="javascript:void(0)" id="front-btn"><img src="images/front-btn.png"></a>&ndash;&gt;-->
+<!--    &lt;!&ndash;    </div>&ndash;&gt;-->
 
-    <!--    &lt;!&ndash; 返回按钮 &ndash;&gt;-->
-    <!--    <div class="back1-btn">-->
-    <!--        <a href="javascript:void(0)" id="back1-btn" onclick="backClick()"><img src="images/back-btn.png"></a>-->
-    <!--    </div>-->
+<!--    &lt;!&ndash;    &lt;!&ndash; 返回按钮 &ndash;&gt;&ndash;&gt;-->
+<!--    &lt;!&ndash;    <div class="back1-btn">&ndash;&gt;-->
+<!--    &lt;!&ndash;        <a href="javascript:void(0)" id="back1-btn" onclick="backClick()"><img src="images/back-btn.png"></a>&ndash;&gt;-->
+<!--    &lt;!&ndash;    </div>&ndash;&gt;-->
 
-    <script>
-        function backClick() {
-            let obj = document.getElementById("slide-sec");
-            obj.style.setProperty('visibility', 'hidden', 'important');
-        }
+<!--    <script>-->
+<!--        function backClick() {-->
+<!--            let obj = document.getElementById("slide-sec");-->
+<!--            obj.style.setProperty('visibility', 'hidden', 'important');-->
+<!--        }-->
 
-        // function frontClick() {
-        //     let sec1 = document.getElementById("slide_sec1");
-        //     let sec2 = document.getElementById("slide_sec2");
-        //     obj.style.setProperty('display', 'none', 'important');
-        // }
-    </script>
-    <!-- 第一页 -->
-    <section id="slide_sec1">
-        <div id="bc1"><img src="images/box/front1_min.png" alt="前" class="tem" ondblclick="box_dbclick()"
-                           onclick="box_click()"/></div>
-        <div id="bc2"><img src="images/box/back1_min.png" alt="后" class="tem" ondblclick="box_dbclick()"
-                           onclick="box_click()"/></div>
-        <div id="bc3"><img src="images/box/over1_min.png" alt="上" class="tem" ondblclick="box_dbclick()"
-                           onclick="box_click()"/></div>
-        <div id="bc4" class="tem"></div>
-        <div id="bc5"><img src="images/box/right1_min.png" alt="右" class="tem" ondblclick="box_dbclick()"
-                           onclick="box_click()"/></div>
-        <div id="bc6"><img src="images/box/left1_min.png" alt="左" class="tem" ondblclick="box_dbclick()"
-                           onclick="box_click()"/></div>
-        <div id="bc7"><img src="images/box/front1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
-                           onclick="box_click()"/></div>
-        <div id="bc8"><img src="images/box/back1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
-                           onclick="box_click()"/></div>
-        <div id="bc9"><img src="images/box/over1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
-                           onclick="box_click()"/></div>
-        <div id="bc10" class="tem"></div>
-        <div id="bc11"><img src="images/box/right1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
-                            onclick="box_click()"/></div>
-        <div id="bc12"><img src="images/box/left1_min.png" alt="" class="tem" ondblclick="box_dbclick()"
-                            onclick="box_click()"/></div>
-    </section>
-    <!-- 点击事件 -->
-    <script>
-        let timer = null
+<!--        // function frontClick() {-->
+<!--        //     let sec1 = document.getElementById("slide_sec1");-->
+<!--        //     let sec2 = document.getElementById("slide_sec2");-->
+<!--        //     obj.style.setProperty('display', 'none', 'important');-->
+<!--        // }-->
+<!--    </script>-->
+<!--    &lt;!&ndash; 第一页 &ndash;&gt;-->
+<!--    <section id="slide_sec1">-->
+<!--        <div id="bc1"><img src="images/box/front1_min.png" alt="前" class="tem" ondblclick="box_dbclick()"-->
+<!--                           onclick="box_click()"/></div>-->
+<!--        <div id="bc2"><img src="images/box/back1_min.png" alt="后" class="tem" ondblclick="box_dbclick()"-->
+<!--                           onclick="box_click()"/></div>-->
+<!--        <div id="bc3"><img src="images/box/over1_min.png" alt="上" class="tem" ondblclick="box_dbclick()"-->
+<!--                           onclick="box_click()"/></div>-->
+<!--        <div id="bc4" class="tem"></div>-->
+<!--        <div id="bc5"><img src="images/box/right1_min.png" alt="右" class="tem" ondblclick="box_dbclick()"-->
+<!--                           onclick="box_click()"/></div>-->
+<!--        <div id="bc6"><img src="images/box/left1_min.png" alt="左" class="tem" ondblclick="box_dbclick()"-->
+<!--                           onclick="box_click()"/></div>-->
+<!--        <div id="bc7"><img src="images/box/front1_min.png" alt="" class="tem" ondblclick="box_dbclick()"-->
+<!--                           onclick="box_click()"/></div>-->
+<!--        <div id="bc8"><img src="images/box/back1_min.png" alt="" class="tem" ondblclick="box_dbclick()"-->
+<!--                           onclick="box_click()"/></div>-->
+<!--        <div id="bc9"><img src="images/box/over1_min.png" alt="" class="tem" ondblclick="box_dbclick()"-->
+<!--                           onclick="box_click()"/></div>-->
+<!--        <div id="bc10" class="tem"></div>-->
+<!--        <div id="bc11"><img src="images/box/right1_min.png" alt="" class="tem" ondblclick="box_dbclick()"-->
+<!--                            onclick="box_click()"/></div>-->
+<!--        <div id="bc12"><img src="images/box/left1_min.png" alt="" class="tem" ondblclick="box_dbclick()"-->
+<!--                            onclick="box_click()"/></div>-->
+<!--    </section>-->
+<!--    &lt;!&ndash; 点击事件 &ndash;&gt;-->
+<!--    <script>-->
+<!--        let timer = null-->
 
-        function box_click() {
-            clearTimeout(timer)
-            let curr_obj = window.event.currentTarget;
-            timer = setTimeout(function () {
-                let curr_img = curr_obj.src;
-                let bc1 = document.getElementById("bc1");
-                let curr_bg = document.getElementById("slide-sec").style.backgroundImage;
-                let details = document.getElementById("details");
-                let details_img = document.getElementById("details-img");
-                if (bc1.style.transform === "translateZ(171px)") {
-                    details_img.setAttribute("src", curr_img);
-                    details.style.setProperty("background-image", curr_bg, "important");
-                    details.style.setProperty('display', 'block', 'important');
-                }
-            }, 500);
-        }
+<!--        function box_click() {-->
+<!--            clearTimeout(timer)-->
+<!--            let curr_obj = window.event.currentTarget;-->
+<!--            timer = setTimeout(function () {-->
+<!--                let curr_img = curr_obj.src;-->
+<!--                let bc1 = document.getElementById("bc1");-->
+<!--                let curr_bg = document.getElementById("slide-sec").style.backgroundImage;-->
+<!--                let details = document.getElementById("details");-->
+<!--                let details_img = document.getElementById("details-img");-->
+<!--                if (bc1.style.transform === "translateZ(171px)") {-->
+<!--                    details_img.setAttribute("src", curr_img);-->
+<!--                    details.style.setProperty("background-image", curr_bg, "important");-->
+<!--                    details.style.setProperty('display', 'block', 'important');-->
+<!--                }-->
+<!--            }, 500);-->
+<!--        }-->
 
-        function box_dbclick() {
-            clearTimeout(timer);
-            let bc1 = document.getElementById("bc1");
-            let bc2 = document.getElementById("bc2");
-            let bc3 = document.getElementById("bc3");
-            let bc4 = document.getElementById("bc4");
-            let bc5 = document.getElementById("bc5");
-            let bc6 = document.getElementById("bc6");
-            if (bc1.style.transform === "translateZ(71px)" || bc1.style.transform === "") {
-                bc1.style.transform = "translateZ(171px)";
-                bc2.style.transform = "rotateX(-180deg) translateZ(171px)";
-                bc3.style.transform = "rotateX(90deg) translateZ(171px)";
-                bc4.style.transform = "rotateX(-90deg) translateZ(257px)";
-                bc5.style.transform = "rotateY(90deg) translateZ(279px)";
-                bc6.style.transform = "rotateY(-90deg) translateZ(171px)";
-            } else {
-                bc1.style.transform = "translateZ(71px)";
-                bc2.style.transform = "rotateX(-180deg) translateZ(71px)";
-                bc3.style.transform = "rotateX(90deg) translateZ(71px)";
-                bc4.style.transform = "rotateX(-90deg) translateZ(157px)";
-                bc5.style.transform = "rotateY(90deg) translateZ(179px)";
-                bc6.style.transform = "rotateY(-90deg) translateZ(71px)";
-            }
-        }
-    </script>
-</div>
+<!--        function box_dbclick() {-->
+<!--            clearTimeout(timer);-->
+<!--            let bc1 = document.getElementById("bc1");-->
+<!--            let bc2 = document.getElementById("bc2");-->
+<!--            let bc3 = document.getElementById("bc3");-->
+<!--            let bc4 = document.getElementById("bc4");-->
+<!--            let bc5 = document.getElementById("bc5");-->
+<!--            let bc6 = document.getElementById("bc6");-->
+<!--            if (bc1.style.transform === "translateZ(71px)" || bc1.style.transform === "") {-->
+<!--                bc1.style.transform = "translateZ(171px)";-->
+<!--                bc2.style.transform = "rotateX(-180deg) translateZ(171px)";-->
+<!--                bc3.style.transform = "rotateX(90deg) translateZ(171px)";-->
+<!--                bc4.style.transform = "rotateX(-90deg) translateZ(257px)";-->
+<!--                bc5.style.transform = "rotateY(90deg) translateZ(279px)";-->
+<!--                bc6.style.transform = "rotateY(-90deg) translateZ(171px)";-->
+<!--            } else {-->
+<!--                bc1.style.transform = "translateZ(71px)";-->
+<!--                bc2.style.transform = "rotateX(-180deg) translateZ(71px)";-->
+<!--                bc3.style.transform = "rotateX(90deg) translateZ(71px)";-->
+<!--                bc4.style.transform = "rotateX(-90deg) translateZ(157px)";-->
+<!--                bc5.style.transform = "rotateY(90deg) translateZ(179px)";-->
+<!--                bc6.style.transform = "rotateY(-90deg) translateZ(71px)";-->
+<!--            }-->
+<!--        }-->
+<!--    </script>-->
+<!--</div>-->
 
-<div class="details" id="details">
-    <div class="back-btn">
-        <a href="javascript:void(0)" id="details-back-btn" onclick="detailsBackClick()"><img src="images/back-btn.png"></a>
-    </div>
-    <img src="images/box/front1.png" alt="" id="details-img">
+<!--<div class="details" id="details">-->
+<!--    <div class="back-btn">-->
+<!--        <a href="javascript:void(0)" id="details-back-btn" onclick="detailsBackClick()"><img src="images/back-btn.png"></a>-->
+<!--    </div>-->
+<!--    <img src="images/box/front1.png" alt="" id="details-img">-->
 
-    <script>
-        function detailsBackClick() {
-            let obj = document.getElementById("details");
-            obj.style.setProperty('display', 'none', 'important');
-        }
-    </script>
-</div>
+<!--    <script>-->
+<!--        function detailsBackClick() {-->
+<!--            let obj = document.getElementById("details");-->
+<!--            obj.style.setProperty('display', 'none', 'important');-->
+<!--        }-->
+<!--    </script>-->
+<!--</div>-->
 
 <div class="container">
     <a href="javascript:void(0)" class="btn" id="btn"><i class="fa fa-instagram"></i></a>
