--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             let obj = window.event.currentTarget;
             let obj_id_str = obj.id;
             let obj_id = parseInt(obj_id_str.substring(1));
+            console.log(obj_id);
             window.location.href = "3dbox.html" + "?id=" + obj_id;
             console.log("id=", obj_id);
         }
@@ -162,105 +163,11 @@
 </div>
 
 <!-- 轮播卡片 -->
-<!--<div id="slide-sec">-->
-<!--    &lt;!&ndash; 后退按钮 &ndash;&gt;-->
-<!--    <div class="back-btn">-->
-<!--        <a href="javascript:void(0)" id="back-btn" onclick="backClick()"><img src="images/back-btn.png" alt=""></a>-->
-<!--    </div>-->
-<!--    &lt;!&ndash;    &lt;!&ndash; 前进按钮 &ndash;&gt;&ndash;&gt;-->
-<!--    &lt;!&ndash;    <div class="front-btn">&ndash;&gt;-->
-<!--    &lt;!&ndash;        <a href="javascript:void(0)" id="front-btn"><img src="images/front-btn.png"></a>&ndash;&gt;-->
-<!--    &lt;!&ndash;    </div>&ndash;&gt;-->
-
-<!--    &lt;!&ndash;    &lt;!&ndash; 返回按钮 &ndash;&gt;&ndash;&gt;-->
-<!--    &lt;!&ndash;    <div class="back1-btn">&ndash;&gt;-->
-<!--    &lt;!&ndash;        <a href="javascript:void(0)" id="back1-btn" onclick="backClick()"><img src="images/back-btn.png"></a>&ndash;&gt;-->
-<!--    &lt;!&ndash;    </div>&ndash;&gt;-->
-
-<!--    <script>-->
-<!--        function backClick() {-->
-<!--            let obj = document.getElementById("slide-sec");-->
-<!--            obj.style.setProperty('visibility', 'hidden', 'important');-->
-<!--        }-->
-
-<!--        // function frontClick() {-->
-<!--        //     let sec1 = document.getElementById("slide_sec1");-->
-<!--        //     let sec2 = document.getElementById("slide_sec2");-->
-<!--        //     obj.style.setProperty('display', 'none', 'important');-->
-<!--        // }-->
-<!--    </script>-->
-<!--    &lt;!&ndash; 第一页 &ndash;&gt;-->
-<!--    <section id="slide_sec1">-->
-<!--        <div id="bc1"><img src="images/box/front1_min.png" alt="前" class="tem" ondblclick="box_dbclick()"-->
-<!--                           onclick="box_click()"/></div>-->
-<!--        <div id="bc2"><img src="images/box/back1_min.png" alt="后" class="tem" ondblclick="box_dbclick()"-->
-<!--                           onclick="box_click()"/></div>-->
-<!--        <div id="bc3"><img src="images/box/over1_min.png" alt="上" class="tem" ondblclick="box_dbclick()"-->
-<!--                           onclick="box_click()"/></div>-->
-<!--        <div id="bc4" class="tem"></div>-->
-<!--        <div id="bc5"><img src="images/box/right1_min.png" alt="右" class="tem" ondblclick="box_dbclick()"-->
-<!--                           onclick="box_click()"/></div>-->
-<!--        <div id="bc6"><img src="images/box/left1_min.png" alt="左" class="tem" ondblclick="box_dbclick()"-->
-<!--                           onclick="box_click()"/></div>-->
-<!--        <div id="bc7"><img src="images/box/front1_min.png" alt="" class="tem" ondblclick="box_dbclick()"-->
-<!--                           onclick="box_click()"/></div>-->
-<!--        <div id="bc8"><img src="images/box/back1_min.png" alt="" class="tem" ondblclick="box_dbclick()"-->
-<!--                           onclick="box_click()"/></div>-->
-<!--        <div id="bc9"><img src="images/box/over1_min.png" alt="" class="tem" ondblclick="box_dbclick()"-->
-<!--                           onclick="box_click()"/></div>-->
-<!--        <div id="bc10" class="tem"></div>-->
-<!--        <div id="bc11"><img src="images/box/right1_min.png" alt="" class="tem" ondblclick="box_dbclick()"-->
-<!--                            onclick="box_click()"/></div>-->
-<!--        <div id="bc12"><img src="images/box/left1_min.png" alt="" class="tem" ondblclick="box_dbclick()"-->
-<!--                            onclick="box_click()"/></div>-->
-<!--    </section>-->
-<!--    &lt;!&ndash; 点击事件 &ndash;&gt;-->
-<!--    <script>-->
-<!--        let timer = null-->
-
-<!--        function box_click() {-->
-<!--            clearTimeout(timer)-->
-<!--            let curr_obj = window.event.currentTarget;-->
-<!--            timer = setTimeout(function () {-->
-<!--                let curr_img = curr_obj.src;-->
-<!--                let bc1 = document.getElementById("bc1");-->
-<!--                let curr_bg = document.getElementById("slide-sec").style.backgroundImage;-->
-<!--                let details = document.getElementById("details");-->
-<!--                let details_img = document.getElementById("details-img");-->
-<!--                if (bc1.style.transform === "translateZ(171px)") {-->
-<!--                    details_img.setAttribute("src", curr_img);-->
-<!--                    details.style.setProperty("background-image", curr_bg, "important");-->
-<!--                    details.style.setProperty('display', 'block', 'important');-->
-<!--                }-->
-<!--            }, 500);-->
-<!--        }-->
-
-<!--        function box_dbclick() {-->
-<!--            clearTimeout(timer);-->
-<!--            let bc1 = document.getElementById("bc1");-->
-<!--            let bc2 = document.getElementById("bc2");-->
-<!--            let bc3 = document.getElementById("bc3");-->
-<!--            let bc4 = document.getElementById("bc4");-->
-<!--            let bc5 = document.getElementById("bc5");-->
-<!--            let bc6 = document.getElementById("bc6");-->
-<!--            if (bc1.style.transform === "translateZ(71px)" || bc1.style.transform === "") {-->
-<!--                bc1.style.transform = "translateZ(171px)";-->
-<!--                bc2.style.transform = "rotateX(-180deg) translateZ(171px)";-->
-<!--                bc3.style.transform = "rotateX(90deg) translateZ(171px)";-->
-<!--                bc4.style.transform = "rotateX(-90deg) translateZ(257px)";-->
-<!--                bc5.style.transform = "rotateY(90deg) translateZ(279px)";-->
-<!--                bc6.style.transform = "rotateY(-90deg) translateZ(171px)";-->
-<!--            } else {-->
-<!--                bc1.style.transform = "translateZ(71px)";-->
-<!--                bc2.style.transform = "rotateX(-180deg) translateZ(71px)";-->
-<!--                bc3.style.transform = "rotateX(90deg) translateZ(71px)";-->
-<!--                bc4.style.transform = "rotateX(-90deg) translateZ(157px)";-->
-<!--                bc5.style.transform = "rotateY(90deg) translateZ(179px)";-->
-<!--                bc6.style.transform = "rotateY(-90deg) translateZ(71px)";-->
-<!--            }-->
-<!--        }-->
-<!--    </script>-->
-<!--</div>-->
+<div id="slide-sec">
+    <iframe data-src="3dbox.html"
+            width="100%" height="100%" frameborder="0"
+            allowfullscreen id="my-iframe"></iframe>
+</div>
 
 <!--<div class="details" id="details">-->
 <!--    <div class="back-btn">-->
