--- a/3dbox.html
+++ b/3dbox.html
@@ -85,6 +85,7 @@
         let slide = $("#slide-sec", window.parent.document);
         let myIframe = $("#my-iframe", window.parent.document);
         console.log(slide);
+        console.log(myIframe);
         slide.css('display', 'none', 'important');
         myIframe.removeAttr("src");
     }
