--- a/index.html
+++ b/index.html
@@ -154,10 +154,15 @@
 
         function myClick() {
             let obj = window.event.currentTarget;
-            let obj_id = parseInt(obj.id[1])
+            let obj_id = parseInt(obj.id[1]);
+            console.log("obj", obj);
+            console.log("obj_id", obj_id);
             let slide_sec1 = document.getElementById("slide-sec");
             let myIframe = document.getElementById("my-iframe");
-            myIframe.src = myIframe.getAttribute('data-src') + "?id=" + obj_id;
+            console.log("slide_sec1", slide_sec1);
+            console.log("myIframe", myIframe);
+            console.log("myIframe.src", myIframe.src);
+            // myIframe.src = myIframe.getAttribute('data-src') + "?id=" + obj_id;
             slide_sec1.style.setProperty('display', 'flex', 'important');
         }
     </script>
