--- a/3dbox.html
+++ b/3dbox.html
@@ -89,7 +89,7 @@
         let myIframe = $("#my-iframe", window.parent.document);
         console.log(slide);
         console.log(myIframe);
-        slide.css('display', 'none', 'important');
+        slide.css('visibility', 'hidden', 'important');
         myIframe.removeAttr("src");
     }
 </script>
