--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             console.log("myIframe", myIframe);
             console.log("myIframe.src", myIframe.src);
             // myIframe.src = myIframe.getAttribute('data-src') + "?id=" + obj_id;
-            slide_sec1.style.setProperty('display', 'flex', 'important');
+            slide_sec1.style.setProperty('visibility', 'visible', 'important');
         }
     </script>
 </div>
