--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             console.log("slide_sec1", slide_sec1);
             console.log("myIframe", myIframe);
             console.log("myIframe.src", myIframe.src);
-            // myIframe.src = myIframe.getAttribute('data-src') + "?id=" + obj_id;
+            myIframe.src = myIframe.getAttribute('data-src') + "?id=" + obj_id;
             slide_sec1.style.setProperty('visibility', 'visible', 'important');
         }
     </script>
