--- a/details.html
+++ b/details.html
@@ -20,6 +20,8 @@
             // #####获取url参数#####
             let currImg = $.getUrlParam("curr_img");
             let currBg = $.getUrlParam("curr_bg");
+            console.log(currImg);
+            console.log(currBg);
 
             // #####替换图片#####
             $("body").css("background-image", "url('" + currBg + "')");
