--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     let my_swiper = document.getElementById("my_swiper")
     let innerw = window.innerWidth;
 
-    function rclick() {
+    function lclick() {
         if (btn.style.backgroundSize === "400%") {
             btn.style.backgroundcolor = "#fff";
             btn.style.backgroundSize = "0";
