--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
     function lclick() {
         if (btn.style.backgroundSize === "400%") {
-            btn.style.backgroundcolor = "#fff";
+            btn.style.backgroundColor = "#fff";
             btn.style.backgroundSize = "0";
             my_swiper.style.display = "none";
             console.log("222");
@@ -225,7 +225,7 @@
 
     function rclick() {
         if (rbtn.style.backgroundSize === "400%") {
-            rbtn.style.backgroundcolor = "#fff";
+            rbtn.style.backgroundColor = "#fff";
             rbtn.style.backgroundSize = "0";
         } else {
             rbtn.style.background = "linear-gradient(90deg, #fa7199, #f5ce62, #e43603, #fa7199)";
