--- a/long.html
+++ b/long.html
@@ -29,6 +29,11 @@
                     img.style.setProperty('display', 'none', 'important');
                 }
             });
+
+            if (currId === 1) {
+                $(".front-btn").css("visibility", "hidden");
+                $(".back1-btn").css("visibility", "hidden");
+            }
         })
     </script>
 </head>
