--- a/long.html
+++ b/long.html
@@ -61,7 +61,7 @@
                 } else if (index === 5) {
                     $("#front-btn").css('visibility', 'hidden', 'important');
                 }
-                $("l" + index).style.css('display', 'block', 'important');
+                $("l" + index).css('display', 'block', 'important');
                 $("l" + (index + 1)).css('display', 'block', 'important');
                 return false;
             }
