--- a/long.html
+++ b/long.html
@@ -61,8 +61,8 @@
                 } else if (index === 5) {
                     $("#front-btn").css('visibility', 'hidden', 'important');
                 }
-                $("l" + index).css('display', 'none', 'important');
-                $("l" + (index + 1)).css('display', 'block', 'important');
+                $("#l" + index).css('display', 'none', 'important');
+                $("#l" + (index + 1)).css('display', 'block', 'important');
                 return false;
             }
         });
@@ -81,8 +81,8 @@
                 } else if (index === 3) {
                     $("#back1-btn").css('visibility', 'hidden', 'important');
                 }
-                $("l" + index).css('display', 'none', 'important');
-                $("l" + (index - 1)).css('display', 'block', 'important');
+                $("#l" + index).css('display', 'none', 'important');
+                $("#l" + (index - 1)).css('display', 'block', 'important');
                 return false;
             }
         });
